argocd/cluster-resources/apps/argocd/argocd/templates/allow-namespaces.ftl.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-scm-manager
  namespace: ${config.scm.scmManager.namespace}
spec:
  podSelector:
    matchLabels:
      app: scm-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${config.application.namePrefix}${config.features.argocd.namespace}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-repo-server
      ports:
        - protocol: TCP
          port: 8080
<#if config.features.ingress.active == true>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${config.application.namePrefix}${config.features.ingress.namespace}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
</#if>
<#if config.jenkins.active == true && config.jenkins.internal == true>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${config.application.namePrefix}${config.jenkins.namespace}
          podSelector:
            matchLabels:
              app.kubernetes.io/component: jenkins-controller
              app.kubernetes.io/instance: jenkins
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${config.application.namePrefix}${config.jenkins.namespace}
          podSelector:
            matchLabels:
              jenkins/jenkins-jenkins-agent: "true"
      ports:
        - protocol: TCP
          port: 8080
</#if>
<#list config.application.networkPolicies.bootstrapCidrs as bootstrapCidr>
    - from:
        - ipBlock:
            cidr: ${bootstrapCidr}
      ports:
        - protocol: TCP
          port: 8080
</#list>
